--- a/index.html
+++ b/index.html
@@ -38,12 +38,8 @@
             <p class="text-rose-500 text-xl sm:text-2xl font-semibold text-center mt-4 ">Feel free to contact us if you
                 have any question <br>or need help with a project</p>
             <form class="text-center bg-yellow-100 w-full  sm:w-96 mt-2 sm:mt-6 sm:m-96 border border-20 border-yellow-300">
-                <input type="text" placeholder="Name" class="w-60 p-2 mt-8 placeholder-yellow-400 font-bold"><br>
-                <input type="email" placeholder="Email" class="w-60 p-2 m-4 placeholder-yellow-400 font-bold"><br>
-                <input type="number" placeholder="Phone No." class="w-60 p-2 m-2 placeholder-yellow-400 font-bold"><br>
-                <textarea type="text" placeholder="Message"
-                    class="w-60 p-2 m-4 placeholder-yellow-400 font-bold"></textarea><br>
-                <a href="mailto:shrutivibes@gmail.com" class="buttonClass" type="submit">SEND</a>
+                
+                <a href="mailto:shrutivibes@gmail.com" class="buttonClass" type="submit">say hi</a>
             </form>
             
         </div>
