--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </nav>
 
         <div class="flex  flex-wrap justify-center gap-4 ">
+            <img src="/IMG_0156.jpg" class ="w-60 h-60">
             <img src="/Untitled-Artwork (8).png" class="w-60 h-60">
             <img src="/Untitled-Artwork 1 (5).jpg" class="w-60 h-60 ">
             <img src="/Untitled-Artwork 1 (3).png" class=" w-60 h-60 ">
