--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shru's drawing diary</title>
     <link href="style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -23,7 +25,15 @@
             <a href="#contact">contact</a>
         </nav>
 
+
+
+
+
+
         <div class="flex  flex-wrap justify-center gap-4 ">
+             <img src="/Untitled-Artwork (10).png" class ="w-60 h-60">
+              <img src="/Untitled-Artwork (11).png" class ="w-60 h-60">
+               <img src="/Untitled-Artwork (7).png" class ="w-60 h-60">
             <img src="/IMG_0156.jpg" class ="w-60 h-60">
             <img src="/Untitled-Artwork (8).png" class="w-60 h-60">
             <img src="/Untitled-Artwork 1 (5).jpg" class="w-60 h-60 ">
